--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li class="navigation-item">
                     <a class="navigation__link" href="#">Agencja</a></li>
                 <li class="navigation-item">
-                    <a class="navigation__link" href="#">Portfolio</a></li>
+                    <a class="navigation__link" href="portfolio.html">Portfolio</a></li>
                 <li class="navigation-item">
                     <a class="navigation__link" href="#">Kontakt</a></li>
             </ul>
