--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
             <a class="navigation-logo" href="#">WebStudio</a>
             <ul class="navigation-list">
                 <li class="navigation__item">
-                    <a class="navigation__link" href="#">Agencja</a></li>
+                    <a class="navigation__link" href="index.html">Agencja</a></li>
                 <li class="navigation__item">
                     <a class="navigation__link" href="#">Portfolio</a></li>
                 <li class="navigation__item">
@@ -88,10 +88,18 @@
     </section>
     </main>
 
-    <footer>
-        <a href="#">WebStudio</a>
-        <address class="address__link">m. Warszawa, Aleje Jerozolimskie 21</address>
-        <a class="address__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="address__link"href="tel:+48111111111">+48 111 111 111</a>
+    <footer class="footer">
+        <a class="navigation-logo" href="#">WebStudio</a>
+        <ul>
+            <li class="address__item">
+                <address class="address__link">m. Warszawa, Aleje Jerozolimskie 21</address>
+            </li>
+            <li class="address__item">
+                <a class="address__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="address_item">
+                <a class="address__link" href="tel:+48111111111">+48 111 111 111</a>
+            </li>>
+        </ul>
     </footer>
 </body>
