--- a/index.html
+++ b/index.html
@@ -15,26 +15,25 @@
 
 <body>
     <header class="header">
-        
         <nav class="navigation">
-            <a class="navigation-logo" href="#">WebStudio</a>
-            <ul class="navigation-list">
+            <img class="navigation__logo" src="./images/logo.jpg" alt="logo" >
+            <ul class="navigation__list list">
                 <li class="navigation-item">
-                    <a class="navigation__link" href="#">Agencja</a></li>
-                <li class="navigation-item">
-                    <a class="navigation__link" href="portfolio.html">Portfolio</a></li>
-                <li class="navigation-item">
-                    <a class="navigation__link" href="#">Kontakt</a></li>
+                    <a class="navigation__link link" href="#">Agencja</a></li>
+                <li class="navigatio__item">
+                    <a class="navigation__link link" href="portfolio.html">Portfolio</a></li>
+                <li class="navigation__item">
+                    <a class="navigation__link link" href="#">Kontakt</a></li>
             </ul>
         </nav>
-        <a class="header__email" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="header__phone-number" href="tel:+48111111111">+48 111 111 111</a>
+        <a class="header__email link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="header__phone-number link" href="tel:+48111111111">+48 111 111 111</a>
     </header>
     <main>
         <h1 class="main-header">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU </h1>
         <button class="modal-btn" type="button">Zamów usługę</button>
         <section class="lorem">
-        <ul class="lorem__list">
+        <ul class="lorem__list list">
             <li class="lorem__item">
                 <h3 class="third-header">LOREM IPSUM</h3>
                 <p class="descryption" >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
@@ -51,33 +50,33 @@
         </section>
     <section class="gallery">
         <h2 class="gallery__header">Czym się zajmujemy</h2>
-        <ul class="gallery__list">
-            <li class="gallery__list-item"><img class="gallery__item-photo" src="images/portfolio-1.jpg" alt="portfolio-1" width="370" height="294"></li>
-            <li class="gallery__list-item"><img class="gallery__item-photo" src="images/portfolio-2.jpg" alt="portfolio-2" width="370" height="294"></li>
-            <li class="gallery__list-item"><img class="gallery__item-photo" src="images/portfolio-3.jpg" alt="portfolio-3" width="370" height="294"></li>
+        <ul class="gallery__list list">
+            <li class="gallery__list-item"><img class="gallery__item-photo" src="images/portfolio-1.jpg" alt="portfolio-1" ></li>
+            <li class="gallery__list-item"><img class="gallery__item-photo" src="images/portfolio-2.jpg" alt="portfolio-2" ></li>
+            <li class="gallery__list-item"><img class="gallery__item-photo" src="images/portfolio-3.jpg" alt="portfolio-3" ></li>
         </ul>
     </section>
 
     <section>
         <h2 class="secondary-header">Nasz zespół</h2>
-        <ul class="team__list">
+        <ul class="team__list list">
             <li class="team__card">
-                <img class="team__foto" src="images/zespol-1.jpg" alt="zespol-1" width="270" height="260">
+                <img class="team__foto" src="images/zespol-1.jpg" alt="zespol-1" >
                 <h3 class="team__name" >John Doe</h3>
                 <p class="team__job-title">Product Designer</p>
             </li>
             <li class="team__card">
-                <img class="team__foto" src="images/zespol-2.jpg" alt="zespol-2" width="270" height="260">
+                <img class="team__foto" src="images/zespol-2.jpg" alt="zespol-2">
                 <h3 class="team__name" >John Doe</h3>
                 <p class="team__job-title">Frontend Developer</p>
             </li>
             <li class="team__card">    
-                <img class="team__foto" src="images/zespol-3.jpg" alt="zespol-3" width="270" height="260">
+                <img class="team__foto" src="images/zespol-3.jpg" alt="zespol-3">
                 <h3 class="team__name" >John Doe</h3>
                 <p class="team__job-title"   <p>Marketing</p>
             </li>
             <li class="team__card">
-                <img class="team__foto" src="images/zespol-4.jpg" alt="zespol-4" width="270" height="260">
+                <img class="team__foto" src="images/zespol-4.jpg" alt="zespol-4" >
                 <h3 class="team__name" >John Doe</h3>
                 <p class="team__job-title" <p>UI Designer</p>
             </li>
@@ -86,7 +85,7 @@
     </main>
     <footer class="footer">
         <a class="navigation-logo" href="#">WebStudio</a>
-        <ul>
+        <ul class="address_list list">
             <li class="address__item">
                 <address class="address__link">m. Warszawa, Aleje Jerozolimskie 21</address>
             </li>
@@ -95,7 +94,7 @@
             </li>
             <li class="address_item">
                 <a class="address__link" href="tel:+48111111111">+48 111 111 111</a>
-            </li>>
+            </li>
         </ul>
     </footer>
 </body>
