--- a/portfolio.html
+++ b/portfolio.html
@@ -15,71 +15,73 @@
 <body>
     <header class="header">
         <nav class="navigation">
-            <a class="navigation-logo" href="#">WebStudio</a>
-            <ul class="navigation-list">
+            <img class="navigation__logo" src="./images/logo.jpg" alt="logo" >
+            <ul class="navigation__list list">
                 <li class="navigation__item">
-                    <a class="navigation__link" href="index.html">Agencja</a></li>
+                    <a class="navigation__link link" href="index.html">Agencja</a></li>
                 <li class="navigation__item">
-                    <a class="navigation__link" href="#">Portfolio</a></li>
+                    <a class="navigation__link link" href="#">Portfolio</a></li>
                 <li class="navigation__item">
-                    <a class="navigation__link" href="#">Kontakt</a></li>
+                    <a class="navigation__link link" href="#">Kontakt</a></li>
             </ul>
         </nav>
-        <a class="header__email"href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="header__phone-number" href="tel:+48111111111">+48 111 111 111</a>
+        <a class="header__email link"href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="header__phone-number link" href="tel:+48111111111">+48 111 111 111</a>
     </header>
     <main>
-    <section class="butttons">
-        <ul class="buttons__list">
-            <li class="buttons__item"><button type="button">Wszystkie</button></li>
-            <li class="buttons__item"><button type="button">Strony</button></li>
-            <li class="buttons__item"><button type="button">Aplikacje</button></li>
-            <li class="buttons__item"><button type="button">Dizajn</button></li>
-            <li class="buttons__item"><button type="button">Marketing</button></li>
+    <section class="buttons">
+        <ul class="buttons__list list">
+            <li class="buttons__item"><button class="button-menu">Wszystkie</button></li>
+            <li class="buttons__item"><button class="button-menu">Strony</button></li>
+            <li class="buttons__item"><button class="button-menu">Aplikacje</button></li>
+            <li class="buttons__item"><button class="button-menu">Dizajn</button></li>
+            <li class="buttons__item"><button class="button-menu">Marketing</button></li>
         </ul>
-        <ul portfolio__list>
-            <li class="portfolio_card">
-                <img class= "portfolio__item" src="images/portf-1.jpg" alt="portf-1" width="370" height="294">
+    </section>
+    <section class="portfolio">
+        <ul class="portfolio__list list">
+            <li class="portfolio__card">
+                <img class= "portfolio__item" src="images/portf-1.jpg" alt="portf-1" >
                 <h3 class="portfolio__name">Technocrack</h3>
                 <p class="portfolio__title">Strona internetowa</p>
             </li>
-            <li class="portfolio_card">
-                <img class= "portfolio__item" src="images/portf-2.jpg" alt="portf-2" width="370" height="294">
+            <li class="portfolio__card">
+                <img class= "portfolio__item" src="images/portf-2.jpg" alt="portf-2" >
                 <h3 class="portfolio__name">Grafika New Orlean vs Golden Star</h3>
                 <p class="portfolio__title">Dizajn</p>
             </li>
-            <li class="portfolio_card">
-                <img class= "portfolio__item" src="images/portf-3.jpg" alt="portf-3" width="370" height="294">
+            <li class="portfolio__card">
+                <img class= "portfolio__item" src="images/portf-3.jpg" alt="portf-3" >
                 <h3 class="portfolio__name">Restauracja Seafood</h3>
                 <p class="portfolio__title">Aplikacja</p>
             </li>
-            <li class="portfolio_card">
-                <img class= "portfolio__item" src="images/portf-4.jpg" alt="portf-4" width="370" height="294">
+            <li class="portfolio__card">
+                <img class= "portfolio__item" src="images/portf-4.jpg" alt="portf-4" >
                 <h3 class="portfolio__name">Projekt Prime</h3>
                 <p class="portfolio__title">Marketing</p>
             </li>
-            <li class="portfolio_card">
-                <img class= "portfolio__item" src="images/portf-5.jpg" alt="portf-5" width="370" height="294">
+            <li class="portfolio__card">
+                <img class= "portfolio__item" src="images/portf-5.jpg" alt="portf-5" >
                 <h3 class="portfolio__name"> Projekt Boxes</h3>
                 <p class="portfolio__title">Aplikacja</p>
             </li>
-            <li class="portfolio_card">
-                <img class= "portfolio__item" src="images/portf-6.jpg" alt="portf-6" width="370" height="294">
+            <li class="portfolio__card">
+                <img class= "portfolio__item" src="images/portf-6.jpg" alt="portf-6" >
                 <h3>In class="portfolio__name"spiration has no Borders</h3>
                 <p class="portfolio__title">Strona internetowa</p>
             </li>
-            <li class="portfolio_card">
-                <img class= "portfolio__item" src="images/portf-7.jpg" alt="portf-7" width="370" height="294">
+            <li class="portfolio__card">
+                <img class= "portfolio__item" src="images/portf-7.jpg" alt="portf-7" >
                 <h3 class="portfolio__name"} magazyn Limited Edition</h3>
                 <p class="portfolio__title">Dizajn</p>
             </li>
-            <li class="portfolio_card">
-                <img class= "portfolio__item" src="images/portf-8.jpg" alt="portf-8" width="370" height="294">
+            <li class="portfolio__card">
+                <img class= "portfolio__item" src="images/portf-8.jpg" alt="portf-8" >
                 <h3 class="portfolio__name">Projekt LAB</h3>
                 <p class="portfolio__title">Marketing</p>
             </li>
-            <li class="portfolio_card">
-                <img class= "portfolio__item" src="images/portf-9.jpg" alt="portf-8" width="370" height="294">
+            <li class="portfolio__card">
+                <img class= "portfolio__item" src="images/portf-9.jpg" alt="portf-8" >
                 <h3 class="portfolio__name"Growing Business</h3>
                 <p class="portfolio__title">Aplikacja</p>
             </li>
@@ -89,7 +91,7 @@
 
     <footer class="footer">
         <a class="navigation-logo" href="#">WebStudio</a>
-        <ul>
+        <ul class="address__list list">
             <li class="address__item">
                 <address class="address__link">m. Warszawa, Aleje Jerozolimskie 21</address>
             </li>
