--- a/index.html
+++ b/index.html
@@ -83,18 +83,19 @@
         </ul>
     </section>
     </main>
-    <footer class="footer">
-        <a class="navigation-logo" href="#">WebStudio</a>
-        <ul class="address_list list">
+       <footer class="footer">
+        <img class="logo" src="./images/logo-dark.png" alt="logo" >
+        <ul class="address__list list">
             <li class="address__item">
                 <address class="address__link">m. Warszawa, Aleje Jerozolimskie 21</address>
             </li>
             <li class="address__item">
-                <a class="address__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="footer__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li class="address_item">
-                <a class="address__link" href="tel:+48111111111">+48 111 111 111</a>
+                <a class="footer__link" href="tel:+48111111111">+48 111 111 111</a>
             </li>
         </ul>
     </footer>
+    
 </body>
