--- a/portfolio.html
+++ b/portfolio.html
@@ -31,11 +31,11 @@
     <main>
     <section class="buttons">
         <ul class="buttons__list list">
-            <li class="buttons__item"><button class="button-menu">Wszystkie</button></li>
-            <li class="buttons__item"><button class="button-menu">Strony</button></li>
-            <li class="buttons__item"><button class="button-menu">Aplikacje</button></li>
-            <li class="buttons__item"><button class="button-menu">Dizajn</button></li>
-            <li class="buttons__item"><button class="button-menu">Marketing</button></li>
+            <li class="buttons__item"><button type="button" class="button-menu">Wszystkie</button></li>
+            <li class="buttons__item"><button type="button" class="button-menu">Strony</button></li>
+            <li class="buttons__item"><button type="button" class="button-menu">Aplikacje</button></li>
+            <li class="buttons__item"><button type="button" class="button-menu">Dizajn</button></li>
+            <li class="buttons__item"><button type="button" class="button-menu">Marketing</button></li>
         </ul>
     </section>
     <section class="portfolio">
@@ -67,7 +67,7 @@
             </li>
             <li class="portfolio__card">
                 <img class= "portfolio__item" src="images/portf-6.jpg" alt="portf-6" >
-                <h3>In class="portfolio__name"spiration has no Borders</h3>
+                <h3>In spiration has no Borders</h3>
                 <p class="portfolio__title">Strona internetowa</p>
             </li>
             <li class="portfolio__card">
@@ -90,16 +90,16 @@
     </main>
 
     <footer class="footer">
-        <a class="navigation-logo" href="#">WebStudio</a>
+        <img class="logo" src="./images/logo-dark.png" alt="logo" >
         <ul class="address__list list">
             <li class="address__item">
                 <address class="address__link">m. Warszawa, Aleje Jerozolimskie 21</address>
             </li>
             <li class="address__item">
-                <a class="address__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="footer__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li class="address_item">
-                <a class="address__link" href="tel:+48111111111">+48 111 111 111</a>
+                <a class="footer__link" href="tel:+48111111111">+48 111 111 111</a>
             </li>
         </ul>
     </footer>
