--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </section>
     </main>
        <footer class="footer">
-        <img class="logo" src="./images/logo-dark.png" alt="logo" >
+        <img class="footer__logo" src="./images/logo-dark.png" alt="logo" >
         <ul class="address__list list">
             <li class="address__item">
                 <address class="address__link">m. Warszawa, Aleje Jerozolimskie 21</address>
